# ledger-app-hedera

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  hedera.c  nanopb_pb2.py  prepare-nanopb.sh  pyproject.toml  requirements.txt  x.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql-workflow.yml
firmware/s/: debug.hex  normal.hex
metal/: Dockerfile  x.py
proto/: BasicTypes.pb.c  BasicTypes.pb.h  BasicTypes.proto  BasicTypes_pb2.py  CryptoCreateTransactionBody.pb.c  CryptoCreateTransactionBody.pb.h  CryptoCreateTransactionBody.proto  CryptoCreate_pb2.py  CryptoTransfer.proto  CryptoTransferTransactionBody.pb.c  CryptoTransferTransactionBody.pb.h  CryptoTransferTransactionBody.proto  Query.proto  Response.proto  TokenAssociate.proto  TokenAssociate_pb2.py  TokenBurn.proto  TokenBurn_pb2.py  TokenMint.proto  TokenMint_pb2.py  Transaction.proto  TransactionBody.pb.c  TransactionBody.pb.h  TransactionBody.proto  TransactionBody_pb2.py  Transfer.proto  Transfer_pb2.py  Wrappers.proto  Wrappers_pb2.py  basic_types.proto  basic_types_pb2.py  basic_types_pb2.pyi  crypto_create.proto  crypto_create_pb2.py  crypto_create_pb2.pyi  crypto_transfer.proto  crypto_transfer_pb2.py  crypto_transfer_pb2.pyi  crypto_update.proto  crypto_update_pb2.py  (+26 more)
speculos/: Dockerfile  x.py
src/: debug.c  debug.h  errors.h  get_app_configuration.c  get_public_key.c  get_public_key.h  globals.c  globals.h  handlers.c  handlers.h  hedera.c  hedera.h  hedera_format.c  hedera_format.h  io.c  io.h  main.c  menu.c  menu.h  pb_custom.c  pb_custom.h  printf.c  printf.h  sign_transaction.c  sign_transaction.h  ui.c  ui.h  utils.c  utils.h
src/ui/: ui_common.h  ui_flows.h  (+3 more)
tests/: .pdm.toml  conftest.py  nanopb_pb2.py  pyproject.toml  requirements.txt  test_hedera.py  utils.py
tests/apps/: hedera.py  hedera_builder.py
tests/elfs/: hedera_nanos.elf  hedera_nanosplus.elf  hedera_nanox.elf
unit-tests/: CMakeLists.txt  README.md  test_hedera_format.c
